# Angstrom-Method-Rewrite

./: README.md  Rec-000193.yaml  pyproject.toml
docs/pyangstrom/: caching.html  config.html  exp_setup.html  fit.html  helpers.html  index.html  io.html  pipeline.html  signal.html  transform.html
docs/pyangstrom/fitting_methods/: index.html  lsr.html  mcmc.html  metropolis_hastings.html  nelder_mead.html
docs/pyangstrom/hu/: index.html
docs/pyangstrom/hu/HT/: index.html  signatures.html
docs/pyangstrom/hu/RT/: index.html  signatures.html
docs/pyangstrom/sample_solutions/: hu_high_temp.html  index.html  kil_circular_room_temp.html  lopez_baeza_short.html
docs/pyangstrom/visualization/: fit.html  index.html  recording.html  region.html  signal.html
docs/pyangstrom/wrappers/: caching.html  config.html  data_extraction.html  helpers.html  index.html  io.html  pipeline.html
docs/pyangstrom/wrappers/plotting/: animation.html  index.html  static.html
pyangstrom/: __init__.py  caching.py  config.py  exp_setup.py  fit.py  helpers.py  io.py  pipeline.py  signal.py  transform.py  visualization.py
pyangstrom/fitting_methods/: lsr.py  metropolis_hastings.py  nelder_mead.py
pyangstrom/hu/HT/: __init__.py
pyangstrom/hu/RT/: __init__.py
pyangstrom/sample_solutions/: hu_high_temp.py  kil_circular_room_temp.py  lopez_baeza_short.py
pyangstrom/visualization/: recording.py  region.py  signal.py
pyangstrom/wrappers/: caching.py  config.py  data_extraction.py  helpers.py  io.py  pipeline.py
pyangstrom/wrappers/plotting/: animation.py  static.py
pyangstrom/yuan/: signatures.py
pyangstrom/yuan/HT/: __init__.py  signatures.py
pyangstrom/yuan/RT/: __init__.py  signatures.py
