[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Angstrom-Method-Rewrite"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "pyangstromHT@git+https://github.com/RuralBrick/cylindrical-angstrom1.git#egg=pyangstromHT",
    "pyangstromRT@git+https://github.com/RuralBrick/cylindrical-angstrom2.git#egg=pyangstromRT",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyangstrom"]
