[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyangstrom"
version = "1.0.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pyyaml",
    "tqdm",
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "lmfit",
    "pyangstromHT@git+https://github.com/RuralBrick/cylindrical-angstrom1.git#egg=pyangstromHT",
    "pyangstromRT@git+https://github.com/RuralBrick/cylindrical-angstrom2.git#egg=pyangstromRT",
]
authors = [
    {name = "Theodore Lau", email = "teddy1405@g.ucla.edu"},
]
description = """
Perform the Angstrom method for determining thermal conductivity using thermal \
camera data."""
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = [
    "Angstrom method",
    "thermal conductivity",
    "thermal imaging",
    "heat transfer",
    "material science",
    "mechanical engineering",
    "research",
    "research tool",
    "asme",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pdoc3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pyangstrom"]
